package apatterson.textrpg.main;

public class Main {

    public static void main(String[] args){
        GameLogic.startGame();
    }
}