package apatterson.textrpg.main;

public enum PlayerClass {
    WARRIOR, MAGE, ROGUE, CLERIC
}
